---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: ??.12.2023
  Changes:
    - Storage Tanks are now taken into account for the total pipeline length.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 27.12.2023
  Features:
    - Add support for other mods to add custom entries to the GUI.
  Bugfixes:
    - Fix Player Kills not being tracked properly.
    - Fix typo "Distance Drove" to "Distance Driver". (Thank SpeckledFleebeedoo!)
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 13.12.2023
  Features:
    - Add Russian translation, thanks to Shadow_Man.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 13.12.2023
  Features:
    - Add new statistic "Total Enemy Kills"
  Changes:
    - (Internal) Add localization to all text so that it can be translated.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 10.12.2023
  Changes:
    - Added semi-transparent black backdrop to prevent other GUIs to be clickable, similar to the vanilla victory screen.
  Bugfixes:
    - Fix underground pipe approximate length calculation.
    - Fix inconsistent formatting for distances under 1000km.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 06.12.2023
  Features:
    - A better victory screen is displayed upon victory showing more interesting information.